samples/_failures_safe/1761649859_4da81c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_19a4d479.c: In function ‘main’:
./samples/SAFE/__tmp_19a4d479.c:148:9: error: expected declaration or statement at end of input
  148 |         buffer_free(&compressed_buf);
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_19a4d479.c:148:9: error: expected declaration or statement at end of input
